--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,21 @@
-:root{
-    --color-brand-light:#819B57;
-    --color-primary-light: #FAF4E;
+:root {
+    --color-primary-light: #FAF4EA;
     --color-primary-dark: #31261A;
     --color-brand-dark: #465929;
+    --color-brand-light: #819B57;
 }
-body{
-    color: var(--color-primary-dark6k4ewsz);
+*{
+    box-sizing: border-box;
+}
+body {
+    color: var(--color-primary-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+address{
+    font-style: normal;
 }
 ul {
     list-style-type: none;
@@ -17,6 +27,7 @@ ul {
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .button:hover {
@@ -26,14 +37,19 @@ ul {
 
 .link {
     color: var(--color-primary-light);
+    text-decoration: none;
 }
 
 .link:hover {
-    color: var(--color-brand-light-light);
+    color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 .hero-title {
     color: var(--color-primary-light);
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
 }
 
 .hero-title .accent {
@@ -44,6 +60,58 @@ ul {
     background-color: var(--color-brand-light);
     color: var(--color-primary-light);
 }
-.section-title .accent{
+
+.adventages-item {
+    font-weight: 300;
+    font-size: 20px;
+}
+
+.section-title {
+    font-weight: 900;
+    font-size: 64px;
+    line-height: 1.31;
+}
+
+.section-title .accent {
     color: var(--color-brand-dark);
+}
+
+.traditions-text .brand {
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+
+.traditions-text .uppercase {
+    text-transform: uppercase;
+}
+
+.chef-title {
+    font-weight: 600;
+    font-size: 40px;
+}
+
+.format-title {
+    color: var(--color-primary-light);
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.format-text {
+    color: var(--color-primary-light);
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.address-link {
+    color: var(--color-primary-light);
+    font-weight: 300;
+    font-size: 16px;
+    text-decoration: none;
+}
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+.address-copyright{
+    color: #a18268;
+    font-size: 14px;
 }
